fix(safari): extra space due to browser default margin

--- a/src/client/styles/main/common.scss
+++ b/src/client/styles/main/common.scss
@@ -3,6 +3,7 @@
  *********/
 & {
 	display: inline-flex;
+	margin: 0;
 	outline: none;
 	cursor: pointer;
 	border: 1px solid;
